@@ -3,7 +3,6 @@ package io.github.edmaputra.iam.adapter.rest;
 import java.net.URI;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -87,7 +86,7 @@ public class ScopeController {
 		List<ScopeNodeResponse> responses = manageScopeUseCase.getFlatScopeList(new TenantId(tenantUuid))
 				.stream()
 				.map(ScopeNodeResponse::fromDomain)
-				.collect(Collectors.toList());
+				.toList();
 
 		return ResponseEntity.ok(responses);
 	}
